syntax = "proto3";

option csharp_namespace = "RNGesus";

package rng;

service Rngesus {
  rpc GenerateNumbers (RngRequest) returns (RngReply);
}

message RngRequest {
  int32 rngCount = 1;
  int32 rngMax = 2;
}

message RngReply {
  repeated int32 numbers = 1;
}
